<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity" android:background="@color/common_google_signin_btn_text_light_disabled">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_new"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/currentUserTextView"
            android:layout_marginTop="72dp" android:gravity="center" android:textSize="18sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/currentUserTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp">
        <Button
                android:text="@string/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/playButton"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/authInLayout"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">
        <Button
                android:text="@string/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/logInButton" android:layout_weight="1"/>
        <Button
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/signUpButton" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/authOutLayout"
            app:layout_constraintTop_toBottomOf="@+id/authInLayout" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp">
        <Button
                android:text="@string/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/logOutButton" android:layout_weight="1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>