<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/common_google_signin_btn_text_dark_disabled">

    <Switch
            android:text="@string/connection_peding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pendingSwith" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/pendingSwith"
            android:id="@+id/view2" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/enter_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="18sp" android:gravity="center"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/view2"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textInputLayout3"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp" android:layout_marginRight="5dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:targetApi="jelly_bean" android:focusableInTouchMode="true">

        <EditText
                android:layout_width="wrap_content"
                tools:targetApi="jelly_bean"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="8"
                android:id="@+id/connectNickTextView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nickTextView" android:hint="@string/nick"
                android:textSize="24sp" android:focusableInTouchMode="true"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/connectButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="18sp"
            android:gravity="center" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/view2"
            android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>